# mt-examples

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build.sh
.github/ISSUE_TEMPLATE/: build-problems.md  example-explanation.md  example-request.md
c23/: CMakeLists.txt
c23/add_consecutive/: CMakeLists.txt  main.c
c23/multirwmut/: CMakeLists.txt  main.c
c23/multirwsem/: CMakeLists.txt  main.c
c23/prodconsmut/: CMakeLists.txt  main.c
c23/prodconssem/: CMakeLists.txt  main.c
c23/server/: CMakeLists.txt
c23/server/requesthdl/: CMakeLists.txt  request.c  request.h
c23/server/srvproc/: CMakeLists.txt  main.c
c23/server/srvseq/: CMakeLists.txt  main.c
c23/server/srvthpool/: CMakeLists.txt  main.c
c23/server/srvthr/: CMakeLists.txt  main.c
c23/simple/: CMakeLists.txt
c23/simple/dynth/: CMakeLists.txt  main.c
c23/simple/dynthalloc/: CMakeLists.txt  main.c
c23/simple/fixracevar/: CMakeLists.txt  main.c
c23/simple/printargs/: CMakeLists.txt  main.c
c23/simple/printmsg/: CMakeLists.txt  main.c
c23/simple/racevar/: CMakeLists.txt  main.c
cpp23/: .clang-tidy  CMakeLists.txt
cpp23/add_consecutive/: CMakeLists.txt  main.cpp
cpp23/add_consecutive_async/: CMakeLists.txt  main.cpp
cpp23/multirwmut/: CMakeLists.txt  main.cpp
cpp23/multirwsem/: CMakeLists.txt  main.cpp
cpp23/prodconsmut/: CMakeLists.txt  main.cpp
cpp23/prodconssem/: main.cpp  (+1 more)
doc/: add_consecutive.md  examples.md  multirwmut.md  multirwsem.md  prodconssem.md  prodconstmut.md  requesthdl.md  srvproc.md  srvseq.md  srvthpool.md  srvthr.md
(+13 files in other folders)
