# Simple examples
add_subdirectory(simple)

# Add consecutive example
add_subdirectory(add_consecutive)

# Producer-consumer examples
add_subdirectory(prodconssem)
add_subdirectory(prodconsmut)

# Multiple readers and writers
add_subdirectory(multirwsem)
add_subdirectory(multirwmut)

# Server examples
add_subdirectory(server)